spacing fix between nav and splash area

--- a/source/_patterns/02-molecules/splash/_splash.scss
+++ b/source/_patterns/02-molecules/splash/_splash.scss
@@ -7,6 +7,7 @@ Molecule: Splash
   position: relative;
   z-index: 0;
   display: grid;
+  margin-top: -2px;
 
   img {
     display: block;
